CircleCI: add /nix caches. Test for qemu-canokey building time and reusal
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,17 +63,23 @@ jobs:
       - run:
           name: Creating all modules and patches digest (All modules cache digest)
           command: |
-            find ./Makefile ./patches/ ./modules/ -type f | sort -h |xargs sha256sum > ./tmpDir/all_modules_and_patches.sha256sums \
+            find ./flake.nix ./flake.lock ./Makefile ./patches/ ./modules/ -type f | sort -h |xargs sha256sum > ./tmpDir/all_modules_and_patches.sha256sums \
 
       - run:
           name: Creating coreboot (and associated patches) and musl-cross-make modules digest (musl-cross-make and coreboot cache digest)
           command: |
-            find ./Makefile ./modules/coreboot ./modules/musl-cross* ./patches/coreboot* -type f | sort -h | xargs sha256sum > ./tmpDir/coreboot_musl-cross.sha256sums \
+            find ./flake.nix ./flake.lock ./Makefile ./modules/coreboot ./modules/musl-cross* ./patches/coreboot* -type f | sort -h | xargs sha256sum > ./tmpDir/coreboot_musl-cross.sha256sums \
 
       - run:
           name: Creating musl-cross-make and musl-cross-make patches digest (musl-cross-make cache digest)
           command: |
-            find ./Makefile modules/musl-cross* -type f | sort -h | xargs sha256sum > ./tmpDir/musl-cross.sha256sums \
+            find ./flake.nix ./flake.lock ./Makefile modules/musl-cross* -type f | sort -h | xargs sha256sum > ./tmpDir/musl-cross.sha256sums \
+
+      - run:
+          name: Creating flake.nix + flake.lock digest
+          command: |
+            find ./flake.nix ./flake.lock -type f | sort -h |xargs sha256sum > ./tmpDir/nix.sha256sums \
+
 
       - restore_cache:
           keys:
@@ -86,6 +92,8 @@ jobs:
             #If precedent cache not found. Restore cache for musl-cross-make module digest (rarely modified).
             #Otherwise, we build cleanly.
             - nix-tweaks-heads_musl-cross-{{ checksum "./tmpDir/musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+            #cache of /nix
+            - nix-tweaks-heads_nix-{{ checksum "./tmpDir/nix.sha256sums" }}{{ .Environment.CACHE_VERSION }}
 
       - run:
           name: Download and neuter xx20 ME (keep generated GBE and extracted IFD in tree)
@@ -168,19 +176,28 @@ jobs:
       - attach_workspace:
           at: ~/
       - save_cache:
+          #Generate cache for /nix store
+          key: nix-tweaks-heads_nix-{{ checksum "./tmpDir/nix.sha256sums" }}{{ .Environment.CACHE_VERSION }}
+          paths:
+            - /nix
+
+      - save_cache:
           #Generate cache for the same musl-cross module definition if hash is not previously existing
           #CircleCI removed their wildcard support, so we have to list precise versions to cache in directory names
           key: nix-tweaks-heads_musl-cross-{{ checksum "./tmpDir/musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
+            - /nix
             - crossgcc
             - build/x86/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
             - build/ppc64/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
             - packages
+
       - save_cache:
           #Generate cache for the same coreboot mnd musl-cross-make modules definition if hash is not previously existing
           #CircleCI removed their wildcard support, so we have to list precise versions to cache in directory names
           key: nix-tweaks-heads_coreboot-musl-cross-{{ checksum "./tmpDir/coreboot_musl-cross.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
+            - /nix
             - crossgcc
             - build/x86/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
             - build/ppc64/musl-cross-38e52db8358c043ae82b346a2e6e66bc86a53bc1
@@ -200,6 +217,7 @@ jobs:
           #Generate cache for the exact same modules definitions if hash is not previously existing
           key: nix-tweaks-heads_modules-and-patches-{{ checksum "./tmpDir/all_modules_and_patches.sha256sums" }}{{ .Environment.CACHE_VERSION }}
           paths:
+            - /nix
             - crossgcc
             - build
             - packages
