CircleCI: have nix call output its own build logs, and keep $DISPLAY while neglecting rest of environement variables
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
           name: Make Board (FULL ORDERED BUILD LOGS HERE UNTIL JOB FAILED)
           command: |
             rm -rf build/<<parameters.arch>>/<<parameters.target>>/* build/<<parameters.arch>>/log/* &&
-            nix --extra-experimental-features 'nix-command flakes' develop --ignore-environment --command make V=1 BOARD=<<parameters.target>> <<parameters.subcommand>> ||
+            nix --extra-experimental-features 'nix-command flakes' develop --print-build-logs --ignore-environment --keep DISPLAY --command make V=1 BOARD=<<parameters.target>> <<parameters.subcommand>> ||
             touch ./tmpDir/failed_build
           no_output_timeout: 3h
       - run:
