modules/coreboot,config/coreboot-nitropad: Update to the newest revision
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-nitropad-nv41.config
+++ b/config/coreboot-nitropad-nv41.config
@@ -159,8 +159,8 @@ CONFIG_MAX_ACPI_TABLE_SIZE_KB=144
 CONFIG_HAVE_INTEL_FIRMWARE=y
 CONFIG_MRC_SETTINGS_CACHE_SIZE=0x10000
 CONFIG_DRIVERS_INTEL_WIFI=y
-CONFIG_IFD_BIN_PATH="../nitrokey-blobs/nitropad-nv41/flashdescriptor-HAP.bin"
-CONFIG_ME_BIN_PATH="../nitrokey-blobs/nitropad-nv41/me.bin"
+CONFIG_IFD_BIN_PATH="3rdparty/dasharo-blobs/novacustom/nv4x_adl/descriptor.bin"
+CONFIG_ME_BIN_PATH="3rdparty/dasharo-blobs/novacustom/nv4x_adl/me.bin"
 CONFIG_CONSOLE_CBMEM_BUFFER_SIZE=0x20000
 CONFIG_VBT_DATA_SIZE_KB=9
 CONFIG_CARDBUS_PLUGIN_SUPPORT=y
@@ -214,10 +214,10 @@ CONFIG_COREBOOT_ROMSIZE_KB=32768
 CONFIG_ROM_SIZE=0x02000000
 CONFIG_HAVE_POWER_STATE_AFTER_FAILURE=y
 CONFIG_HAVE_POWER_STATE_PREVIOUS_AFTER_FAILURE=y
-CONFIG_POWER_STATE_OFF_AFTER_FAILURE=y
-# CONFIG_POWER_STATE_ON_AFTER_FAILURE is not set
+# CONFIG_POWER_STATE_OFF_AFTER_FAILURE is not set
+CONFIG_POWER_STATE_ON_AFTER_FAILURE=y
 # CONFIG_POWER_STATE_PREVIOUS_AFTER_FAILURE is not set
-CONFIG_MAINBOARD_POWER_FAILURE_STATE=0
+CONFIG_MAINBOARD_POWER_FAILURE_STATE=1
 # end of Mainboard
 
 CONFIG_SYSTEM_TYPE_LAPTOP=y
@@ -509,13 +509,33 @@ CONFIG_EC_SYSTEM76_EC_DGPU=y
 #
 # Intel Firmware
 #
+CONFIG_IFDTOOL_DISABLE_ME=y
 CONFIG_HAVE_ME_BIN=y
 # CONFIG_STITCH_ME_BIN is not set
 # CONFIG_ME_REGION_ALLOW_CPU_READ_ACCESS is not set
+CONFIG_HAVE_INTEL_ME_HAP=y
+# CONFIG_INTEL_ME_DISABLED_HECI is not set
+CONFIG_INTEL_ME_DISABLED_HAP=y
+# CONFIG_INTEL_ME_ENABLED is not set
+CONFIG_INTEL_ME_DEFAULT_STATE=2
 # CONFIG_DO_NOT_TOUCH_DESCRIPTOR_REGION is not set
 # CONFIG_LOCK_MANAGEMENT_ENGINE is not set
 CONFIG_UNLOCK_FLASH_REGIONS=y
 CONFIG_BIOS_VENDOR="3mdeb"
+
+#
+# =================================== Dasharo ====================================
+#
+
+#
+# Dasharo Configuration
+#
+CONFIG_DASHARO_PREFER_S3_SLEEP=y
+# end of Dasharo Configuration
+
+#
+# ================================================================================
+#
 CONFIG_UDK_BASE=y
 CONFIG_UDK_202005_BINDING=y
 CONFIG_UDK_2013_VERSION=2013
@@ -598,13 +618,10 @@ CONFIG_CRB_TPM_BASE_ADDRESS=0xfed40000
 # CONFIG_ELOG is not set
 CONFIG_CACHE_MRC_SETTINGS=y
 CONFIG_MRC_SETTINGS_PROTECT=y
-CONFIG_SMMSTORE=y
-# CONFIG_SMMSTORE_V2 is not set
-CONFIG_SMMSTORE_SIZE=0x40000
+# CONFIG_SMMSTORE is not set
 CONFIG_SPI_FLASH=y
 CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP=y
 CONFIG_BOOT_DEVICE_SPI_FLASH_RW_NOMMAP_EARLY=y
-CONFIG_SPI_FLASH_SMM=y
 # CONFIG_SPI_FLASH_NO_FAST_READ is not set
 CONFIG_TPM_INIT_RAMSTAGE=y
 # CONFIG_TPM_PPI is not set
