site-local/config: Override LOCALVERSION and SMBIOS_PRODUCT_NAME
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/site-local/config
+++ b/site-local/config
@@ -2,14 +2,14 @@ BRAND_NAME=Dasharo
 
 ifeq "nitropad-nv41" "$(BOARD)"
 
-CONFIG_BOARD_NAME="NovaCustom NV4x 12th Gen | v0.9.0"
+CONFIG_BOARD_NAME="NovaCustom NV4xPZ"
+CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
+CONFIG_COREBOOT_SMBIOS_PRODUCT_NAME=NV4xPZ
 
 else ifeq "nitropad-ns50" "$(BOARD)"
 
-CONFIG_BOARD_NAME="NovaCustom NS5x 12th Gen | v0.9.0"
-
-else
-
-CONFIG_BOARD_NAME+=" | v0.9.0"
+CONFIG_BOARD_NAME="NovaCustom NS5x_NS7xPU"
+CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
+CONFIG_COREBOOT_SMBIOS_PRODUCT_NAME=NS5x_NS7xPU
 
 endif
