Add MSI PRO Z690-A (DDR5) target
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -240,3 +240,10 @@ workflows:
           subcommand: ""
           requires:
             - nitropad-nv41
+
+      - build_and_persist:
+          name: msi_z690a_ddr5
+          target: msi_z690a_ddr5
+          subcommand: ""
+          requires:
+            - nitropad-nv41
