Add MSI PRO Z790-P DDR4 target
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,3 +247,10 @@ workflows:
           subcommand: ""
           requires:
             - nitropad-nv41
+
+      - build_and_persist:
+          name: msi_z790p_ddr4
+          target: msi_z790p_ddr4
+          subcommand: ""
+          requires:
+            - nitropad-nv41
