Add MSI PRO Z790-P (DDR5) target
Signed-off-by: Michał Żygowski <michal.zygowski@3mdeb.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -254,3 +254,10 @@ workflows:
           subcommand: ""
           requires:
             - nitropad-nv41
+
+      - build_and_persist:
+          name: msi_z790p_ddr5
+          target: msi_z790p_ddr5
+          subcommand: ""
+          requires:
+            - nitropad-nv41
