--- a/site-local/config
+++ b/site-local/config
@@ -14,4 +14,20 @@ CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
 CONFIG_COREBOOT_SMBIOS_PRODUCT_NAME=NS5x_NS7xPU
 CONFIG_COREBOOT_SMBIOS_MANUFACTURER=Notebook
 
+else ifeq "msi_z690a_ddr4" "$(BOARD)"
+
+CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
+
+else ifeq "msi_z690a_ddr5" "$(BOARD)"
+
+CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
+
+else ifeq "msi_z790p_ddr4" "$(BOARD)"
+
+CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
+
+else ifeq "msi_z790p_ddr5" "$(BOARD)"
+
+CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
+
 endif
