Allow overriding DMI manufacturer name
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/site-local/config
+++ b/site-local/config
@@ -5,13 +5,13 @@ ifeq "nitropad-nv41" "$(BOARD)"
 CONFIG_BOARD_NAME="NovaCustom NV4xPZ"
 CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
 CONFIG_COREBOOT_SMBIOS_PRODUCT_NAME=NV4xPZ
-CONFIG_MAINBOARD_SMBIOS_MANUFACTURER="Notebook"
+CONFIG_COREBOOT_SMBIOS_MANUFACTURER=Notebook
 
 else ifeq "nitropad-ns50" "$(BOARD)"
 
 CONFIG_BOARD_NAME="NovaCustom NS5x_NS7xPU"
 CONFIG_COREBOOT_LOCALVERSION="$(BRAND_NAME) (coreboot+heads) v0.9.0"
 CONFIG_COREBOOT_SMBIOS_PRODUCT_NAME=NS5x_NS7xPU
-CONFIG_MAINBOARD_SMBIOS_MANUFACTURER="Notebook"
+CONFIG_COREBOOT_SMBIOS_MANUFACTURER=Notebook
 
 endif
