ivy/sandy/haswell/q35: move away of coreboot custom TPM envent log format to TPM1/TPM2
Signed-off-by: Thierry Laurion <insurgo@riseup.net>

--- a/config/coreboot-t530-dgpu-maximized.config
+++ b/config/coreboot-t530-dgpu-maximized.config
@@ -572,8 +572,8 @@ CONFIG_MAINBOARD_HAS_TPM1=y
 # CONFIG_TPM_DEACTIVATE is not set
 # CONFIG_DEBUG_TPM is not set
 # CONFIG_TPM_RDRESP_NEED_DELAY is not set
-CONFIG_TPM_LOG_CB=y
-# CONFIG_TPM_LOG_TPM1 is not set
+# CONFIG_TPM_LOG_CB is not set
+CONFIG_TPM_LOG_TPM1=y
 CONFIG_TPM_MEASURED_BOOT_RUNTIME_DATA=""
 CONFIG_PCR_BOOT_MODE=1
 CONFIG_PCR_HWID=1
