--- a/config/coreboot-qemu-tpm2.config
+++ b/config/coreboot-qemu-tpm2.config
@@ -404,8 +404,12 @@ CONFIG_TPM2=y
 CONFIG_TPM=y
 # CONFIG_DEBUG_TPM is not set
 # CONFIG_TPM_RDRESP_NEED_DELAY is not set
-CONFIG_TPM_LOG_CB=y
-# CONFIG_TPM_LOG_TPM2 is not set
+# CONFIG_TPM_LOG_CB is not set
+CONFIG_TPM_LOG_TPM2=y
+# CONFIG_TPM_HASH_SHA1 is not set
+CONFIG_TPM_HASH_SHA256=y
+# CONFIG_TPM_HASH_SHA384 is not set
+# CONFIG_TPM_HASH_SHA512 is not set
 CONFIG_TPM_MEASURED_BOOT_RUNTIME_DATA=""
 CONFIG_PCR_BOOT_MODE=1
 CONFIG_PCR_HWID=1
