--- a/config/coreboot-z220-cmt.config
+++ b/config/coreboot-z220-cmt.config
@@ -110,7 +110,7 @@ CONFIG_VENDOR_HP=y
 # CONFIG_VENDOR_UP is not set
 CONFIG_MAINBOARD_PART_NUMBER="HP Z220 CMT Workstation"
 CONFIG_MAINBOARD_VERSION="1.0"
-CONFIG_MAINBOARD_DIR="hp/z220_series"
+CONFIG_MAINBOARD_DIR="hp/snb_ivb_desktops"
 CONFIG_VGA_BIOS_ID="8086,0106"
 CONFIG_DIMM_MAX=4
 CONFIG_DIMM_SPD_SIZE=256
@@ -167,6 +167,8 @@ CONFIG_SPI_FLASH_STMICRO=y
 # CONFIG_BOARD_HP_COMPAQ_ELITE_8300_USDT is not set
 # CONFIG_BOARD_HP_ELITEBOOK_820_G2 is not set
 # CONFIG_BOARD_HP_FOLIO_9480M is not set
+CONFIG_BOARD_HP_Z220_CMT_WORKSTATION=y
+# CONFIG_BOARD_HP_Z220_SFF_WORKSTATION is not set
 # CONFIG_BOARD_HP_2170P is not set
 # CONFIG_BOARD_HP_2560P is not set
 # CONFIG_BOARD_HP_2570P is not set
@@ -177,9 +179,7 @@ CONFIG_SPI_FLASH_STMICRO=y
 # CONFIG_BOARD_HP_FOLIO_9470M is not set
 # CONFIG_BOARD_HP_PROBOOK_6360B is not set
 # CONFIG_BOARD_HP_REVOLVE_810_G1 is not set
-CONFIG_BOARD_HP_Z220_CMT_WORKSTATION=y
-# CONFIG_BOARD_HP_Z220_SFF_WORKSTATION is not set
-CONFIG_BOARD_HP_Z220_SERIES_COMMON=y
+CONFIG_BOARD_HP_SNB_IVB_DESKTOPS_COMMON=y
 # CONFIG_DEBUG_SMI is not set
 CONFIG_MAINBOARD_SMBIOS_PRODUCT_NAME="Hewlett-Packard Z220 CMT Workstation"
 CONFIG_HAVE_IFD_BIN=y
@@ -212,6 +212,7 @@ CONFIG_BOARD_ROMSIZE_KB_16384=y
 # CONFIG_COREBOOT_ROMSIZE_KB_10240 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_12288 is not set
 CONFIG_COREBOOT_ROMSIZE_KB_16384=y
+# CONFIG_COREBOOT_ROMSIZE_KB_24576 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_32768 is not set
 # CONFIG_COREBOOT_ROMSIZE_KB_65536 is not set
 CONFIG_COREBOOT_ROMSIZE_KB=16384
@@ -307,8 +308,8 @@ CONFIG_RAMINIT_ENABLE_ECC=y
 #
 # Southbridge
 #
+CONFIG_SOUTHBRIDGE_INTEL_BD82X6X_COMMON=y
 CONFIG_SOUTHBRIDGE_INTEL_BD82X6X=y
-CONFIG_SOUTH_BRIDGE_OPTIONS=y
 # CONFIG_HIDE_MEI_ON_ERROR is not set
 CONFIG_PCIEXP_HOTPLUG=y
 CONFIG_INTEL_DESCRIPTOR_MODE_REQUIRED=y
@@ -484,6 +485,7 @@ CONFIG_MEMORY_MAPPED_TPM=y
 CONFIG_TPM_TIS_BASE_ADDRESS=0xfed40000
 # CONFIG_DRIVERS_SIL_3114 is not set
 CONFIG_DRIVERS_WIFI_GENERIC=y
+CONFIG_DRIVERS_MTK_WIFI=y
 # end of Generic Drivers
 
 #
@@ -512,8 +514,8 @@ CONFIG_MAINBOARD_HAS_TPM1=y
 # CONFIG_TPM_DEACTIVATE is not set
 # CONFIG_DEBUG_TPM is not set
 CONFIG_TPM_RDRESP_NEED_DELAY=y
-CONFIG_TPM_LOG_CB=y
-# CONFIG_TPM_LOG_TPM1 is not set
+# CONFIG_TPM_LOG_CB is not set
+CONFIG_TPM_LOG_TPM1=y
 CONFIG_TPM_MEASURED_BOOT_RUNTIME_DATA=""
 CONFIG_PCR_BOOT_MODE=1
 CONFIG_PCR_HWID=1
