boards/msi*: use w/a for >16MiB flash
Signed-off-by: Michał Kopeć <michal.kopec@3mdeb.com>

--- a/boards/msi_z790p_ddr4/msi_z790p_ddr4.config
+++ b/boards/msi_z790p_ddr4/msi_z790p_ddr4.config
@@ -43,7 +43,9 @@ export CONFIG_PRIMARY_KEY_TYPE=ecc
 CONFIG_TPM2_TSS=y
 CONFIG_OPENSSL=y
 
-
 export CONFIG_BOOT_DEV="/dev/nvme0n1"
 export CONFIG_BOARD_NAME="MSI PRO Z790-P DDR4"
 export CONFIG_FLASHROM_OPTIONS="--force --noverify-all -p internal"
+
+# Workaround to access > 16MiB BIOS region on ADL+
+export CONFIG_CBFS_VIA_FLASHROM=y
